--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,19 @@
 Package: episensr
 Type: Package
 Title: Basic sensitivity analysis of epidemiological results
-Version: 0.1
-Imports: trapezoid
+Version: 0.6
+Imports: 
+	 triangle,
+	 trapezoid
 Date: 2015-02-06
-Author: "Denis Haine <denis.haine@gmail.com> [aut, cre]"
-Maintainer: "Denis Haine <denis.haine@gmail.com> [aut, cre]"
+Authors@R: person("Denis", "Haine", email = "denis.haine@gmail.com", role =
+c("aut", "cre"))
+BugReports: https://github.com/dhaine/episensr/issues
 Description: episensr provides basic sensitivity analysis of the observed
 	     relative risks adjusting for unmeasured confounding and
-	     misclassification of the exposure.
+	     misclassification of the exposure/outcome, or both. It follows the
+	     bias analysis methods and examples from the book by Lash T.L, Fox
+	     M.P, and Fink A.K. Applying Quantitative Bias Analysis to
+	     Epidemiologic Data, Springer, 2009.
+Depends: R (>= 3.1.0)
 License: GPL-2
