--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,25 @@
-# Sample .travis.yml for R projects from https://github.com/craigcitro/r-travis
+# Sample .travis.yml for R projects.
+#
+# See README.md for instructions, or for more configuration options,
+# see the wiki:
+# https://github.com/craigcitro/r-travis/wiki
 
 language: c
 
 before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
+- curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+- chmod 755 ./travis-tool.sh
+- ./travis-tool.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_deps
+- ./travis-tool.sh install_deps
 
 script: ./travis-tool.sh run_tests
 
 after_failure:
-  - ./travis-tool.sh dump_logs
-
-env:
-  - WARNINGS_ARE_ERRORS=1
+- ./travis-tool.sh dump_logs
 
 notifications:
-  email:
-    on_success: change
-    on_failure: change
+email:
+on_success: change
+on_failure: change
