--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,5 @@ export(confounders)
 export(confounders.emm)
 export(confounders.limit)
 export(confounders.poly)
+export(misclassification)
 export(selection)
