--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(confounders.emm)
 export(confounders.limit)
 export(confounders.poly)
 export(misclassification)
+export(multidimBias)
 export(selection)
