Modify namespace to include probsens suite of fucntions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,7 @@ export(confounders.limit)
 export(confounders.poly)
 export(misclassification)
 export(multidimBias)
+export(probsens)
+export(probsens.conf)
+export(probsens.sel)
 export(selection)
