Update Rbuildignore with comments and news file to exclude.

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,3 @@
-.travis.yml
-cran-comments.md
+.travis.yml      # Used for continuous integration testing with travis
+cran-comments.md # Comments from CRAN submission
+NEWS.md          # A news file
