Update namespace with probsens.irr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ export(misclassification)
 export(multidimBias)
 export(probsens)
 export(probsens.conf)
+export(probsens.irr)
 export(probsens.sel)
 export(selection)
