--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,6 @@ export(multidimBias)
 export(probsens)
 export(probsens.conf)
 export(probsens.irr)
+export(probsens.irr.conf)
 export(probsens.sel)
 export(selection)
