--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,5 +1,5 @@
-^\.travis\.yml$  # Used for continuous integration testing with travis
-cran-comments.md # Comments from CRAN submission
-NEWS.md          # A news file
+^\.travis\.yml$     # Used for continuous integration testing with travis
+^cran-comments\.md$ # Comments from CRAN submission
+NEWS\.md            # A news file
 ^README\.Rmd$
 ^README-.*\.png$
