--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,3 +28,9 @@ importFrom(grid,arrow)
 importFrom(grid,unit)
 importFrom(gridExtra,grid.arrange)
 importFrom(plyr,ldply)
+importFrom(stats,binom.test)
+importFrom(stats,median)
+importFrom(stats,qnorm)
+importFrom(stats,quantile)
+importFrom(stats,runif)
+importFrom(stats,setNames)
