--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,9 @@ BugReports: https://github.com/dhaine/episensr/issues
 Description: Basic sensitivity analysis of the observed relative risks adjusting
 	     for unmeasured confounding and misclassification of the
 	     exposure/outcome, or both. It follows the bias analysis methods and
-	     examples from the book by Lash T.L, Fox M.P, and Fink A.K. Applying
-	     Quantitative Bias Analysis to Epidemiologic Data, Springer, 2009.
+	     examples from the book by Lash T.L, Fox M.P, and Fink A.K.
+	     "Applying Quantitative Bias Analysis to Epidemiologic Data",
+	     'Springer', 2009.
 Depends: R (>= 3.1.3)
 License: GPL-2
 Suggests: testthat
