Update files with new 2-by-2 tables fix

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,24 +1,27 @@
 Package: episensr
 Type: Package
 Title: Basic Sensitivity Analysis of Epidemiological Results
-Version: 0.7.1
-Imports: 
-	 triangle,
-	 trapezoid,
-	 plyr,
-	 ggplot2,
-	 grid,
-	 gridExtra
+Version: 0.7.2
+Imports:
+    triangle,
+    trapezoid,
+    plyr,
+    ggplot2,
+    grid,
+    gridExtra
 Date: 2015-10-05
 Authors@R: person("Denis", "Haine", email = "denis.haine@gmail.com",
                   role = c("aut", "cre"))
 BugReports: https://github.com/dhaine/episensr/issues
 Description: Basic sensitivity analysis of the observed relative risks adjusting
-	     for unmeasured confounding and misclassification of the
-	     exposure/outcome, or both. It follows the bias analysis methods and
-	     examples from the book by Lash T.L, Fox M.P, and Fink A.K.
-	     "Applying Quantitative Bias Analysis to Epidemiologic Data",
-	     'Springer', 2009.
-Depends: R (>= 3.2.0)
+    for unmeasured confounding and misclassification of the
+    exposure/outcome, or both. It follows the bias analysis methods and
+    examples from the book by Lash T.L, Fox M.P, and Fink A.K.
+    "Applying Quantitative Bias Analysis to Epidemiologic Data",
+    'Springer', 2009.
+Depends:
+    R (>= 3.2.3)
 License: GPL-2
-Suggests: testthat
+Suggests:
+    testthat
+RoxygenNote: 5.0.1
