--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Description: Basic sensitivity analysis of the observed relative risks adjusting
     exposure/outcome, or both. It follows the bias analysis methods and
     examples from the book by Lash T.L, Fox M.P, and Fink A.K.
     "Applying Quantitative Bias Analysis to Epidemiologic Data",
-    'Springer', 2009.
+    ('Springer', 2009).
 Depends:
     R (>= 3.2.3)
 License: GPL-2
