--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: episensr
 Type: Package
 Title: Basic Sensitivity Analysis of Epidemiological Results
-Version: 0.7.2
+Version: 0.8.0
 Imports:
     triangle,
     trapezoid,
@@ -11,7 +11,7 @@ Imports:
     gridExtra,
     reshape,
     boot
-Date: 2016-02-02
+Date: 2017-01-03
 Authors@R: person("Denis", "Haine", email = "denis.haine@gmail.com",
                   role = c("aut", "cre"))
 BugReports: https://github.com/dhaine/episensr/issues
@@ -22,11 +22,12 @@ Description: Basic sensitivity analysis of the observed relative risks adjusting
     "Applying Quantitative Bias Analysis to Epidemiologic Data",
     ('Springer', 2009).
 Depends:
-    R (>= 3.2.3)
+    R (>= 3.3.2)
 License: GPL-2
 Suggests:
     testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    aplore3
 RoxygenNote: 5.0.1
 VignetteBuilder: knitr
