--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,11 @@
-# Sample .travis.yml for R projects.
-#
-# See README.md for instructions, or for more configuration options,
-# see the wiki:
-# https://github.com/craigcitro/r-travis/wiki
+# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: c
-
-before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-  - sudo apt-get update -q
-
-install:
-  - ./travis-tool.sh install_deps
-  - ./travis-tool.sh install_aptget r-cran-triangle r-cran-trapezoid
-
-script: ./travis-tool.sh run_tests
-
-after_failure:
-  - ./travis-tool.sh dump_logs
+language: R
+warnings_are_errors: false
+sudo: required
+cache: packages
 
 notifications:
   email:
     on_success: change
     on_failure: change
-
-env:
-  - _R_CHECK_FORCE_SUGGESTS_=0
-  - WARNINGS_ARE_ERRORS= false
