Add misclassification for covariates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(confounders.limit)
 export(confounders.poly)
 export(mbias)
 export(misclassification)
+export(misclassification_cov)
 export(multidimBias)
 export(probsens)
 export(probsens.conf)
