--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,12 @@ S3method(plot,mbias)
 S3method(print,episensr)
 S3method(print,episensr.booted)
 S3method(print,mbias)
+export(adj_tab)
 export(boot.bias)
 export(confounders)
+export(confounders.array)
 export(confounders.emm)
+export(confounders.ext)
 export(confounders.limit)
 export(confounders.poly)
 export(mbias)
