Update namespace and man page.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(boot.bias)
 export(confounders)
 export(confounders.array)
 export(confounders.emm)
+export(confounders.evalue)
 export(confounders.ext)
 export(confounders.limit)
 export(confounders.poly)
