Chore Package: Add Code Coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,9 @@ notifications:
   email:
     on_success: change
     on_failure: change
+
+r_github_packages:
+  - r-lib/covr
+
+after_success:
+  - Rscript -e 'covr::codecov()'
