--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,7 @@ Suggests:
     testthat,
     knitr,
     rmarkdown,
-    aplore3
+    aplore3,
+    covr
 RoxygenNote: 6.1.1
 VignetteBuilder: knitr
