--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,25 +25,26 @@ export(probsens.irr)
 export(probsens.irr.conf)
 export(probsens.sel)
 export(selection)
+importFrom(dagitty,coordinates)
+importFrom(ggdag,confounder_triangle)
+importFrom(ggdag,coords2df)
+importFrom(ggdag,coords2list)
+importFrom(ggdag,dagify)
+importFrom(ggdag,ggdag)
+importFrom(ggdag,m_bias)
+importFrom(ggdag,theme_dag)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotate)
-importFrom(ggplot2,element_blank)
+importFrom(ggplot2,fortify)
 importFrom(ggplot2,geom_density)
 importFrom(ggplot2,geom_histogram)
-importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
-importFrom(ggplot2,xlim)
-importFrom(ggplot2,ylim)
-importFrom(grid,arrow)
-importFrom(grid,unit)
-importFrom(gridExtra,grid.arrange)
 importFrom(magrittr,"%>%")
-importFrom(plyr,ldply)
 importFrom(stats,binom.test)
 importFrom(stats,median)
 importFrom(stats,qnorm)
