--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,12 @@ notifications:
     on_success: change
     on_failure: change
 
+addons:
+  apt:
+    packages:
+      - libv8-3.14-dev
+      - libudunits2-dev
+    
 r_github_packages:
   - r-lib/covr
 
