Refactor (misclassification) Rename misclassification_cov to .cov.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(confounders.limit)
 export(confounders.poly)
 export(mbias)
 export(misclassification)
+export(misclassification.cov)
 export(misclassification_cov)
 export(multidimBias)
 export(multiple.bias)
