--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,8 +48,10 @@ importFrom(ggplot2,xlab)
 importFrom(magrittr,"%>%")
 importFrom(stats,binom.test)
 importFrom(stats,median)
+importFrom(stats,qbeta)
 importFrom(stats,qnorm)
 importFrom(stats,quantile)
+importFrom(stats,rbeta)
 importFrom(stats,rlnorm)
 importFrom(stats,runif)
 importFrom(stats,setNames)
