--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: R
+r:
+  - oldrel
+  - release
+  - devel
 warnings_are_errors: false
 sudo: required
 cache: packages
-dist: trusty
+dist: bionic
 
 notifications:
   email:
