--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,6 +33,9 @@ Suggests:
     knitr,
     rmarkdown,
     aplore3,
+    directlabels,
+    tidyverse,
+    lattice,
     covr
 RoxygenNote: 7.1.1
 Encoding: UTF-8
