--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,10 +1,10 @@
-pandoc: '2.2'
+pandoc: '2.5'
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
-  2_probabilistic: 2_probabilistic.html
-  3_multiple_bias: 3_multiple_bias.html
-  4_other_sens: 4_other_sens.html
+  b_probabilistic: b_probabilistic.html
+  c_multiple_bias: c_multiple_bias.html
+  d_other_sens: d_other_sens.html
   episensr: episensr.html
-last_built: 2020-10-09T02:56Z
+last_built: 2020-10-16T16:42Z
 
