--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
+language: r
 r:
   - oldrel
   - release
   - devel
-warnings_are_errors: false
-sudo: required
+warnings_are_errors: true
 cache: packages
-dist: bionic
 
 notifications:
   email:
@@ -20,7 +18,7 @@ addons:
     packages:
       - libv8-3.14-dev
       - libudunits2-dev
-    
+
 r_github_packages:
   - r-lib/covr
 
