update: (misclassification) Use .cov and not _cov anymore

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,6 @@ export(confounders.poly)
 export(mbias)
 export(misclassification)
 export(misclassification.cov)
-export(misclassification_cov)
 export(multidimBias)
 export(multiple.bias)
 export(probsens)
@@ -36,6 +35,7 @@ importFrom(ggdag,ggdag)
 importFrom(ggdag,m_bias)
 importFrom(ggdag,theme_dag)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,after_stat)
 importFrom(ggplot2,annotate)
 importFrom(ggplot2,fortify)
 importFrom(ggplot2,geom_density)
