--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,10 +1,10 @@
-pandoc: '2.5'
-pkgdown: 1.6.1
+pandoc: 2.9.2.1
+pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
   b_probabilistic: b_probabilistic.html
   c_multiple_bias: c_multiple_bias.html
   d_other_sens: d_other_sens.html
   episensr: episensr.html
-last_built: 2021-08-20T17:25Z
+last_built: 2023-05-17T12:46Z
 
