--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,8 +1,8 @@
 destination: docs
 
 template:
-  bootstrap: 5
-  bootswatch: simplex
+  params:
+    bootswatch: simplex
 
 navbar:
   type: inverse
