--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,8 +1,11 @@
-destination: docs
+url: https://dhaine.github.io/episensr/
 
 template:
   bootstrap: 5
   bootswatch: simplex
+
+development:
+  mode: release
 
 navbar:
   type: inverse
