fix: (startup) Add utils to namespace.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,3 +56,4 @@ importFrom(stats,rbeta)
 importFrom(stats,rlnorm)
 importFrom(stats,runif)
 importFrom(stats,setNames)
+importFrom(utils,packageVersion)
