--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,9 +49,11 @@ importFrom(ggplot2,xlab)
 importFrom(magrittr,"%>%")
 importFrom(stats,binom.test)
 importFrom(stats,median)
+importFrom(stats,pnorm)
 importFrom(stats,qbeta)
 importFrom(stats,qnorm)
 importFrom(stats,quantile)
+importFrom(stats,qunif)
 importFrom(stats,rbeta)
 importFrom(stats,rlnorm)
 importFrom(stats,runif)
