add: (refactor) Add legacy versions of PBA functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,9 +22,14 @@ export(multidimBias)
 export(multiple.bias)
 export(probsens)
 export(probsens.conf)
+export(probsens.conf_legacy)
 export(probsens.irr)
 export(probsens.irr.conf)
+export(probsens.irr.conf_legacy)
+export(probsens.irr_legacy)
 export(probsens.sel)
+export(probsens.sel_legacy)
+export(probsens_legacy)
 export(selection)
 importFrom(dagitty,coordinates)
 importFrom(ggdag,confounder_triangle)
