update: () Multiple enhancements after check().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(probsens.irr_legacy)
 export(probsens.sel)
 export(probsens.sel_legacy)
 export(probsens_legacy)
+export(probsens_pv)
 export(selection)
 importFrom(dagitty,coordinates)
 importFrom(ggdag,confounder_triangle)
@@ -60,7 +61,9 @@ importFrom(stats,qnorm)
 importFrom(stats,quantile)
 importFrom(stats,qunif)
 importFrom(stats,rbeta)
+importFrom(stats,rbinom)
 importFrom(stats,rlnorm)
+importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,setNames)
 importFrom(utils,packageVersion)
