update: (perf) Merging misclassification and probsens.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ export(confounders.ext)
 export(confounders.limit)
 export(confounders.poly)
 export(mbias)
-export(misclassification)
+export(misclass)
 export(misclassification.cov)
 export(multidimBias)
 export(multiple.bias)
