update: (perf) Confounding.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,7 @@ export(confounders.limit)
 export(confounders.poly)
 export(mbias)
 export(misclass)
-export(misclassification.cov)
+export(misclass_cov)
 export(multidimBias)
 export(multiple.bias)
 export(probsens)
@@ -29,6 +29,7 @@ export(probsens.irr.conf_legacy)
 export(probsens.irr_legacy)
 export(probsens.sel)
 export(probsens.sel_legacy)
+export(probsens_conf)
 export(probsens_legacy)
 export(probsens_pv)
 export(selection)
