add: (plot) Forest plots.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(probsens_legacy)
 export(probsens_pv)
 export(selection)
 importFrom(dagitty,coordinates)
+importFrom(forcats,fct_rev)
 importFrom(ggdag,confounder_triangle)
 importFrom(ggdag,coords2df)
 importFrom(ggdag,coords2list)
@@ -46,12 +47,15 @@ importFrom(ggplot2,annotate)
 importFrom(ggplot2,fortify)
 importFrom(ggplot2,geom_density)
 importFrom(ggplot2,geom_histogram)
+importFrom(ggplot2,geom_linerange)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(magrittr,"%>%")
 importFrom(stats,binom.test)
 importFrom(stats,median)
