add: (misclass) Probcase record-level adjustment.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,9 @@ Imports:
     dagitty,
     forcats,
     ggdag,
+    lmtest,
     magrittr,
+    sandwich,
     trapezoid,
     triangle,
     truncnorm,
