--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(mbias)
 export(misclass)
 export(misclass_cov)
 export(multidimBias)
+export(probcase)
 export(probsens)
 export(probsens.conf_legacy)
 export(probsens.irr)
@@ -54,16 +55,23 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
+importFrom(lmtest,coeftest)
 importFrom(magrittr,"%>%")
+importFrom(sandwich,sandwich)
 importFrom(stats,binom.test)
+importFrom(stats,binomial)
+importFrom(stats,coef)
+importFrom(stats,glm)
 importFrom(stats,median)
 importFrom(stats,pnorm)
+importFrom(stats,poisson)
 importFrom(stats,qbeta)
 importFrom(stats,qnorm)
 importFrom(stats,quantile)
 importFrom(stats,qunif)
 importFrom(stats,rbeta)
 importFrom(stats,rbinom)
+importFrom(stats,reformulate)
 importFrom(stats,rlnorm)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
