--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ importFrom(sandwich,sandwich)
 importFrom(stats,binom.test)
 importFrom(stats,binomial)
 importFrom(stats,coef)
+importFrom(stats,confint)
 importFrom(stats,glm)
 importFrom(stats,median)
 importFrom(stats,pnorm)
