--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(probsens_conf)
 export(probsens_legacy)
 export(probsens_pv)
 export(selection)
+importFrom(Rcpp,sourceCpp)
 importFrom(dagitty,coordinates)
 importFrom(forcats,fct_rev)
 importFrom(ggdag,confounder_triangle)
@@ -55,7 +56,6 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
-importFrom(lmtest,coeftest)
 importFrom(magrittr,"%>%")
 importFrom(sandwich,sandwich)
 importFrom(stats,binom.test)
@@ -78,3 +78,4 @@ importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,setNames)
 importFrom(utils,packageVersion)
+useDynLib(episensr, .registration = TRUE)
