fix: (rcpp) check.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,8 @@ export(probsens_conf)
 export(probsens_legacy)
 export(probsens_pv)
 export(selection)
+import(RcppProgress)
+import(fastglm)
 importFrom(Rcpp,sourceCpp)
 importFrom(dagitty,coordinates)
 importFrom(forcats,fct_rev)
@@ -61,7 +63,6 @@ importFrom(sandwich,sandwich)
 importFrom(stats,binom.test)
 importFrom(stats,binomial)
 importFrom(stats,coef)
-importFrom(stats,confint)
 importFrom(stats,glm)
 importFrom(stats,median)
 importFrom(stats,pnorm)
