--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,7 +55,6 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
-importFrom(lmtest,coeftest)
 importFrom(magrittr,"%>%")
 importFrom(sandwich,sandwich)
 importFrom(stats,binom.test)
@@ -78,3 +77,5 @@ importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,setNames)
 importFrom(utils,packageVersion)
+useDynLib(episensr, .registration=TRUE)
+importFrom(Rcpp, evalCpp)
